--- a/firebase.json
+++ b/firebase.json
@@ -1,8 +1,46 @@
 {
+  "database": {
+    "rules": "database.rules.json"
+  },
   "functions": {
     "predeploy": [
       "npm --prefix \"$RESOURCE_DIR\" run lint",
       "npm --prefix \"$RESOURCE_DIR\" run build"
+    ]
+  },
+  "hosting": {
+    "public": "frontend",
+    "rewrites": [
+      {
+        "source": "/oauth/**",
+        "function": "app"
+      },
+      {
+        "source": "/smarthome/**",
+        "function": "app"
+      },
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ],
+    "ignore": [
+      "firebase.json",
+      "database-rules.json",
+      "functions",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "headers": [
+      {
+        "source": "**/*.@(js|html)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=0"
+          }
+        ]
+      }
     ]
   }
 }
