--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "actions-on-google": "^2.7.1",
     "firebase-admin": "~7.0.0",
     "firebase-functions": "^2.3.0"
   },
