feat(frondend): use React to build dashboard

--- a/firebase.json
+++ b/firebase.json
@@ -9,7 +9,7 @@
     ]
   },
   "hosting": {
-    "public": "frontend",
+    "public": "frontend/build",
     "rewrites": [
       {
         "source": "/oauth/**",
