--- a/serve/package.json
+++ b/serve/package.json
@@ -8,7 +8,7 @@
     "declarations": true
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-serve",
+    "deploy": "egg-scripts start --daemon --title=egg-server-serve",
     "stop": "egg-scripts stop --title=egg-server-serve",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
