--- a/serve/package.json
+++ b/serve/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "deploy": "egg-scripts start --daemon --title=egg-server-serve",
     "stop": "egg-scripts stop --title=egg-server-serve",
-    "dev": "egg-bin dev",
+    "serve": "egg-bin dev",
     "debug": "egg-bin debug",
     "test-local": "egg-bin test",
     "test": "npm run lint -- --fix && npm run test-local",
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "egg": "^2.6.1",
+    "egg-mongoose": "^3.2.0",
     "egg-scripts": "^2.6.0"
   },
   "devDependencies": {
