--- a/serve/package.json
+++ b/serve/package.json
@@ -22,11 +22,9 @@
     "clean": "ets clean"
   },
   "dependencies": {
-    "actions-on-google": "^2.7.1",
     "egg": "^2.6.1",
     "egg-mongoose": "^3.2.0",
-    "egg-scripts": "^2.6.0",
-    "firebase-admin": "^8.1.0"
+    "egg-scripts": "^2.6.0"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.40",
